# sf_daq_buffer

./: .dockerignore  .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Readme.md  buffer.Dockerfile  build_Dockerfile.sh  build_buffer.sh  ca_default_channel_list  debug.Dockerfile  docker-compose.yml  googletest.in  run_pipeline.sh  setup.py  sf_daq_buffer.drawio
core-buffer/: CMakeLists.txt
core-buffer/include/: BufferBinaryFormat.hpp  BufferH5Writer.hpp  BufferUdpReceiver.hpp  BufferUtils.hpp  EpicsFieldTypes.hpp  LiveH5Reader.hpp  LiveRecvModule.hpp  RamBuffer.hpp  RamBufferWriter.hpp  ReplayH5Reader.hpp  SFWriter.hpp  TypeMap.hpp  UdpReceiver.hpp  UdpRecvModule.hpp  WriterH5Writer.hpp  WriterZmqReceiver.hpp  buffer_config.hpp  eiger.hpp  formats.hpp  image.hpp  jungfrau.hpp  jungfraujoch.hpp
core-buffer/src/: BinaryWriter.cpp  BufferH5Writer.cpp  BufferUdpReceiver.cpp  BufferUtils.cpp  BufferedFastQueue.cpp  FastH5Writer.cpp  FastQueue.cpp  LiveH5Reader.cpp  LiveRecvModule.cpp  RamBuffer.cpp  RamBufferWriter.cpp  ReplayH5Reader.cpp  RingBuffer.cpp  SFWriter.cpp  UdpReceiver.cpp  UdpRecvModule.cpp  WriterH5Writer.cpp  WriterZmqReceiver.cpp
core-buffer/test/: CMakeLists.txt  main.cpp  test_BufferBinaryWriter.cpp  test_BufferH5Writer.cpp  test_BufferUdpReceiver.cpp  test_FastH5Writer.cpp  test_FastQueue.cpp  test_LiveRecvModule.cpp  test_PacketBuffer.cpp  test_RamBuffer.cpp  test_ReplayH5Reader.cpp  test_SFWriter.cpp  test_UdpReceiver.cpp  test_UdpRecvModule.cpp  test_WriterH5Writer.cpp  test_WriterZmqReceiver.cpp  test_bitshuffle.cpp  test_buffer_utils.cpp
jf-assembler/: CMakeLists.txt  README.md
jf-assembler/include/: AssemblerStats.hpp  EigerAssembler.hpp  assembler_config.hpp
jf-assembler/src/: AssemblerStats.cpp  EigerAssembler.cpp  ZmqPulseSyncReceiver.cpp  main.cpp
jf-assembler/test/: CMakeLists.txt
jf-buffer-writer/: CMakeLists.txt
jf-buffer-writer/include/: BufferStats.hpp
jf-buffer-writer/src/: BufferStats.cpp  main.cpp
jf-buffer-writer/test/: CMakeLists.txt  main.cpp  test_BufferBinaryWriter.cpp
jf-live-writer/: CMakeLists.txt  Dockerfile  README.md  debug.Dockerfile
jf-live-writer/include/: BinaryReader.hpp  ImageBinaryWriter.hpp  JFH5LiveWriter.hpp  JFH5Writer.hpp  LiveImageAssembler.hpp  WriterStats.hpp  broker_format.hpp  live_writer_config.hpp
jf-live-writer/src/: BinaryReader.cpp  ImageBinaryWriter.cpp  JFH5LiveWriter.cpp  JFH5Writer.cpp  LiveImageAssembler.cpp  WriterStats.cpp  main.cpp
jf-live-writer/test/: CMakeLists.txt  main.cpp  test_BinaryReader.cpp
jf-udp-recv/: CMakeLists.txt
jf-udp-recv/include/: FrameStats.hpp  FrameUdpReceiver.hpp
jf-udp-recv/src/: FrameStats.cpp  FrameUdpReceiver.cpp  PacketUdpReceiver.cpp  main.cpp
jf-udp-recv/test/: CMakeLists.txt  test_FrameUdpReceiver.cpp  test_PacketUdpReceiver.cpp
jf-zmqstreamer/: CMakeLists.txt
jf-zmqstreamer/include/: FrameCache.hpp  FrameWorker.hpp  PacketBuffer.hpp  PacketUdpReceiver.hpp  Watchdog.hpp  ZmqImagePublisher.hpp
jf-zmqstreamer/src/: FrameWorker.cpp  PacketUdpReceiver.cpp  main.cpp
jf-zmqstreamer/test/: CMakeLists.txt  main.cpp  test_PacketBuffer.cpp  test_PacketUdpReceiver.cpp  test_Watchdog.cpp
jfj-combined/: CMakeLists.txt
jfj-combined/include/: FrameCache.hpp  FrameStats.hpp  FrameWorker.hpp  JfjFrameCache.hpp  JfjFrameStats.hpp  JfjFrameWorker.hpp  PacketBuffer.hpp  PacketUdpReceiver.hpp  Watchdog.hpp  ZmqImagePublisher.hpp
jfj-combined/src/: JfjFrameStats.cpp  JfjFrameWorker.cpp  PacketUdpReceiver.cpp  ZmqImagePublisher.cpp  dummyMain.cpp  main.cpp
jfj-combined/test/: CMakeLists.txt  SimulatedDetector.cpp  dummy_detector.json  test_PacketBuffer.cpp  test_PacketUdpReceiver.cpp
jfj-udp-recv/: CMakeLists.txt  README.md  mockmain.cpp
jfj-udp-recv/include/: DataBuffer.hpp  ImageStats.hpp  JFJochUdpReceiver.hpp  JfjFrameStats.hpp  JfjFrameUdpReceiver.hpp  PacketBuffer.hpp  PacketUdpReceiver.hpp
jfj-udp-recv/src/: JFJochUdpReceiver.cpp  JfjFrameStats.cpp  JfjFrameUdpReceiver.cpp  PacketUdpReceiver.cpp  main.cpp
jfj-udp-recv/test/: test_FrameUdpReceiver.cpp  test_PacketBuffer.cpp
sf-buffer/: CMakeLists.txt  README.md
sf-buffer-recv/: CMakeLists.txt
sf-buffer-recv/include/: FrameStats.hpp
sf-buffer-recv/src/: main.cpp
sf-buffer-writer/: CMakeLists.txt
sf-buffer-writer/src/: BufferBinaryWriter.cpp  BufferStats.cpp  main.cpp
sf-buffer-writer/test/: CMakeLists.txt  main.cpp
sf-buffer/include/: BufferBinaryFormat.hpp  BufferBinaryWriter.hpp  BufferH5Writer.hpp  BufferUdpReceiver.hpp  FrameUdpReceiver.hpp  UdpReceiver.hpp
sf-buffer/src/: BufferBinaryWriter.cpp  BufferH5Writer.cpp  BufferUdpReceiver.cpp  FrameUdpReceiver.cpp  PacketUdpReceiver.cpp  UdpReceiver.cpp  WriterUtils.cpp  main.cpp  sf_buffer.cpp  sf_live.cpp  sf_reader.cpp  sf_replay.cpp  sf_stream.cpp  sf_writer.cpp
sf-buffer/test/: CMakeLists.txt  main.cpp  test_BufferBinaryWriter.cpp  test_BufferH5Writer.cpp  test_BufferUdpReceiver.cpp  test_FrameUdpReceiver.cpp  test_UdpReceiver.cpp  test_sf_replay.cpp
sf-replay/: CMakeLists.txt
sf-replay/include/: BlockZmqSender.hpp  BufferBinaryReader.hpp  ReplayH5Reader.hpp  ReplayZmqSender.hpp
sf-replay/src/: BlockZmqSender.cpp  BufferBinaryReader.cpp  ReplayH5Reader.cpp  ReplayZmqSender.cpp  main.cpp
sf-replay/test/: CMakeLists.txt  main.cpp  test_ReplayH5Reader.cpp
sf-stream/: CMakeLists.txt  README.md
sf-stream/include/: FastQueue.hpp  LiveRecvModule.hpp  StreamStats.hpp  ZmqLiveReceiver.hpp  ZmqLiveSender.hpp  ZmqPulseReceiver.hpp  ZmqPulseSyncReceiver.hpp  stream_config.hpp
sf-stream/src/: FastQueue.cpp  LiveRecvModule.cpp  StreamStats.cpp  ZmqLiveReceiver.cpp  ZmqLiveSender.cpp  ZmqLiveSender.hpp  ZmqPulseReceiver.cpp  ZmqPulseSyncReceiver.cpp  main.cpp
sf-writer/: CMakeLists.txt  README.md
sf-writer/src/: main.cpp  (+7 more)
sim-jungfrau/: CMakeLists.txt
std-det-writer/: CMakeLists.txt  README.md  debug.Dockerfile
std-stream-send/: CMakeLists.txt  build_stdstream.sh  debug.Dockerfile
std-udp-recv/: CMakeLists.txt
std-udp-sync/: CMakeLists.txt  README.md
zmq-receiver/: CMakeLists.txt
(+273 files in other folders)
